# komorebi

./: .gitignore  ARCHITECT_BRIEF_v0.5.0.md  ARCHITECT_BRIEF_v0.7.0_USER_ENHANCEMENTS.md  BUILD.md  CONTEXT_ORACLE_ARCHITECTURE.md  CONVENTIONS.md  ELICITATIONS.md  FEATURE_CONTEXT_RESUME.md  FEATURE_MODULAR_TARGETS.md  FEATURE_MODULE5_v0.6.0_DESIGN.md  FEATURE_MODULE6_v0.7.0_DESIGN.md  IMPLEMENTATION_HANDOFF.md  INTEGRATION_HANDOFF.md  PROGRESS.md  PROPOSAL.md  README.md  RESEARCH_STATE_OF_IMPLEMENTATION.md  TROUBLESHOOTING.md  VERSION  VERSIONING.md  bootstrap_komorebi.py  pyproject.toml  test_explosion.sh
.github/: copilot-instructions.md
.github/prompts/: .prompt-aliases  (+8 more)
backend/: __init__.py
cli/: __init__.py  main.py
config/: mcp_servers.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  CONTEXT_AWARENESS_ANALYSIS.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOYMENT.md  DEVELOPMENT_WORKFLOWS.md  GETTING_STARTED.md  IMPLEMENTATION_HANDOFF_v0.7.0.md  IMPLEMENTATION_SUMMARY.md  MODULE_1_VERIFICATION.md  MODULE_2_PROPOSAL.md  MODULE_2_VERIFICATION.md  MODULE_3_MCP_AGGREGATOR.md  PEDAGOGY.md  PEDAGOGY_PLAYWRIGHT.md  PROMPTS_AND_SKILLS_PROPOSAL.md  PROMPTS_SKILLS_AUDIT.md  PROMPT_GUIDE.md  README.md  SECURITY.md  TAB_LOADING_INVESTIGATION.md  TEST_MANIFEST.md  TROUBLESHOOTING.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts
scripts/: check-commit-version.sh  check-version.sh  hammer_gen.py  hammer_mcp.py  migrate_module2.py  migrate_v1_oracle.py  sync-versions.sh  validate-changelog.sh
(+101 files in other folders)
