[project]
name = "komorebi"
version = "0.8.1"
description = "Cognitive infrastructure for capture, compaction, and context management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "typer>=0.9.0",
    "httpx>=0.26.0",
    "sse-starlette>=1.8.0",
    "rich>=13.7.0",
    "ollama>=0.1.0",
    "pyyaml>=6.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.28.0",
    "ruff>=0.1.0",
]

[project.scripts]
komorebi = "cli.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
